--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.3.2",
+    "jotai": "^2.1.0",
     "maath": "^0.5.3",
     "next": "13.1.6",
     "react": "18.2.0",
